@@ -123,14 +123,14 @@ void CD3D8ShaderMaterialRenderer::OnSetMaterial(const video::SMaterial& material
 
 			// set new vertex shader
 			if (FAILED(pID3DDevice->SetVertexShader(VertexShader)))
-				os::Printer::log("Could not set vertex shader.");
+				os::Printer::log("Could not set vertex shader.", ELL_ERROR);
 		}
 
 		// set new pixel shader
 		if (PixelShader)
 		{
 			if (FAILED(pID3DDevice->SetPixelShader(PixelShader)))
-				os::Printer::log("Could not set pixel shader.");
+				os::Printer::log("Could not set pixel shader.", ELL_ERROR);
 		}
 
 		if (BaseMaterial)
@@ -205,8 +205,8 @@ bool CD3D8ShaderMaterialRenderer::createPixelShader(const c8* pxsh)
 	if (errors)
 	{
 		// print out compilation errors.
-		os::Printer::log("Pixel shader compilation failed:");
-		os::Printer::log((c8*)errors->GetBufferPointer());
+		os::Printer::log("Pixel shader compilation failed:", ELL_ERROR);
+		os::Printer::log((c8*)errors->GetBufferPointer(), ELL_ERROR);
 
 		if (code)
 			code->Release();
@@ -217,7 +217,7 @@ bool CD3D8ShaderMaterialRenderer::createPixelShader(const c8* pxsh)
 
 	if (FAILED(pID3DDevice->CreatePixelShader((DWORD*)code->GetBufferPointer(), &PixelShader)))
 	{
-		os::Printer::log("Could not create pixel shader.");
+		os::Printer::log("Could not create pixel shader.", ELL_ERROR);
 		code->Release();
 		return false;
 	}
@@ -270,8 +270,8 @@ bool CD3D8ShaderMaterialRenderer::createVertexShader(const char* vtxsh, E_VERTEX
 	if (errors)
 	{
 		// print out compilation errors.
-		os::Printer::log("Vertex shader compilation failed:");
-		os::Printer::log((c8*)errors->GetBufferPointer());
+		os::Printer::log("Vertex shader compilation failed:", ELL_ERROR);
+		os::Printer::log((c8*)errors->GetBufferPointer(), ELL_ERROR);
 
 		if (code)
 			code->Release();
@@ -313,7 +313,7 @@ bool CD3D8ShaderMaterialRenderer::createVertexShader(const char* vtxsh, E_VERTEX
 	if (FAILED(pID3DDevice->CreateVertexShader(decl,
 		(DWORD*)code->GetBufferPointer(), &VertexShader, 0)))
 	{
-		os::Printer::log("Could not create vertex shader.");
+		os::Printer::log("Could not create vertex shader.", ELL_ERROR);
 		code->Release();
 		return false;
 	}
