@@ -1,5 +1,7 @@
 Changes in 1.6
 
+ - ELL_ERROR log events are now created when shaders fail to compile or link, reported by Halan
+
  - irrList now uses irrAllocator, fixed by Nox
 
  - Added IGUIWindow::setDraggable and IGUIWindow::isDraggable, by Nox
@@ -29,7 +31,8 @@ Changes in 1.6
  - Added generic console device. You can now use Irrlicht to create and manipuate graphics on a shell where no graphics hardware 
    or windowing system is available. To enable it uncomment #define _IRR_USE_CONSOLE_DEVICE_ in IrrCompileConfig.h
    - The console device can now present images from the software drivers and display them as ASCII art in the console
-   - By default it replaces the default font in the skin, to prevent fonts from being huge.
+   - By default it replaces the default font in the skin, to prevent fonts from being huge.
+
 
 Changes in 1.6 TA
 	- implemented isALoadableFileFormat ( File *file ) for the Archive Loader
